@@ -1,3 +1,7 @@
+2023-09-02 22:39
+1. Добален pyproject.toml с настройками форматера black.
+2. Файл sources/useful_funcs.py отформатирован в соответствии с новыми настройками.
+
 2023-08-28 22:58
 1. Установлен автоформатер Black для работы с jupyter
 2. В requirements.yml экспортировано окружение с установленным автоформатером
